# mrfmap_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: ICL.yaml  ICL_gt.yaml  airsim_factory.yaml  cactus_garden.yaml  cactus_garden_gt.yaml  coffin_world_640_gt.yaml  kinectone_new.yaml  realsense_848.yaml  realsense_new.yaml
config/polys/: kinect2_bias_poly5x.yml  kinect2_stddev_poly5x.yml  realsense_848_small_board_0_25_to_2_5_at_0_1_res_20_x_20_bias.yml  realsense_848_small_board_0_25_to_2_5_at_0_1_res_20_x_20_stddev.yml  realsense_bias_poly5x.yml  realsense_stddev_poly5x.yml
include/mrfmap_ros/: DepthCalibrator.h  GVDBBatchMapCreator.h  RosViewerWrapper.h
launch/: ros_viewer.launch  simple_rgbd_line_cam.launch
models/: model.dae
nodes/dataset_creation/: coffin_world_generator.py  create_noisy_depth_images.py  depth_collector.py  pngs_to_bag.py
nodes/dataset_evaluation/: accuracy_viewer.py  rss_dataset_eval.py  rss_plot_timings.py  rss_print_latex_accuracy_tables.py
nodes/lcm_to_ros/: log_to_bag.py  microstrain_raw_t.lcm  xtion_rgbd_t.lcm
nodes/lcm_to_ros/microstrain/: __init__.py  raw_t.py
nodes/lcm_to_ros/xtion/: __init__.py  rgbd_t.py
nodes/test_scripts/: test_changing_poses.py  test_cuda_inference.py  test_mayavi.py
src/: GVDBBatchMapCreator.cpp  MRFMapRosPyModules.cpp  batch_map_creator.cpp  ros_mrfmap_node.cpp
src/mrfmap_ros/: MRFMapGenerator.py  ReadTemporalCorrectedBag.py
urdf/: simple_rgbd_line_cam.gazebo  simple_rgbd_line_cam.xacro
worlds/: coffin_sack.world
