<?xml version="1.0"?>
<package format="2">
  <name>mrfmap_ros</name>
  <version>0.0.1</version>
  <description>The mrfmap_ros package</description>

  <maintainer email="icoderaven@gmail.com">Kumar Shaurya Shankar</maintainer>
  <license>BSD-3</license>
  <url type="website">http://mrfmap.github.io</url>
  <author email="kshaurya@cmu.edu">Kumar Shaurya Shankar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
</export>
</package>
